# chessboardlife

./: .gitignore  CMakeLists.txt  readme.txt
src/: chessboardlife.cpp  chessboardlife.h  chessboardlife_p.h
